--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nyaapi",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Get your torrents from Nyaa.se",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "mocha": "^3.2.0"
+    "colors": "^1.1.2",
+    "mocha": "^3.2.0",
+    "ping": "^0.2.2"
   }
 }
