Implmented nyaa.pantsu.cat rss + tests Cleaned up gitignore Now uses axios Updated README

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/Kylart/Nyaapi#readme",
   "dependencies": {
-    "req-fast": "^0.2.17",
+    "axios": "^0.16.1",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
