--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai-as-promised": "^6.0.0",
     "colors": "^1.1.2",
     "mocha": "^3.2.0",
-    "ping": "^0.2.2"
+    "ping": "^0.2.2",
+    "prettier": "^1.3.1"
   }
 }
