--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Get your torrents from Nyaa.se",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "lint": "standard --verbose --fix",
+    "test": "npm run lint && mocha"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,16 @@
     "colors": "^1.1.2",
     "mocha": "^3.2.0",
     "ping": "^0.2.2",
-    "prettier": "^1.3.1"
-  }
+    "pre-commit": "^1.2.2",
+    "standard": "^10.0.2"
+  },
+  "standard": {
+    "ignore": [
+      "test/*.js"
+    ]
+  },
+  "pre-commit": [
+    "lint",
+    "test"
+  ]
 }
