--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nyaapi",
   "version": "1.2.2",
   "description": "Non-official api for getting torrent links from Nyaa.si and Nyaa.pantsu.cat",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "standard --verbose --fix",
     "test": "npm run lint && mocha"
@@ -14,11 +14,11 @@
   "author": "Kylart",
   "license": "MIT",
   "keywords": [
-  	"kawanime",
-  	"nyaa-si",
-  	"nyaa-pantsu",
-  	"torrent",
-  	"magnet-links"
+    "kawanime",
+    "nyaa-si",
+    "nyaa-pantsu",
+    "torrent",
+    "magnet-links"
   ],
   "bugs": {
     "url": "https://github.com/Kylart/Nyaapi/issues"
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/Kylart/Nyaapi#readme",
   "dependencies": {
     "axios": "^0.16.1",
+    "cheerio": "^1.0.0-rc.2",
+    "lodash": "^4.17.4",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
@@ -42,6 +44,6 @@
     ]
   },
   "pre-commit": [
-    "test"
+    "lint"
   ]
 }
