Added codecov and cloc Removed package-lock.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ install:
   - npm install
 script:
   - npm test
+  - npm run cloc
+after_success: npm run coverage
 
 notifications:
   email: false
