--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "standard --verbose --fix | snazzy",
     "test:si": "nyc ava --verbose --serial test/si.test.js",
     "test:pantsu": "nyc ava --verbose --serial test/pantsu.test.js",
-    "test": "npm run lint && nyc ava --verbose --serial test",
+    "test": "npm run lint && nyc ava --verbose --serial",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "cloc": "cloc $(git ls-files)"
   },
@@ -30,19 +30,19 @@
   "homepage": "https://github.com/Kylart/Nyaapi#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "cloc": "^2.3.2",
-    "codecov": "^2.3.1",
-    "colors": "^1.1.2",
-    "nyc": "^11.2.1",
+    "ava": "^2.2.0",
+    "cloc": "^2.5.0",
+    "codecov": "^3.5.0",
+    "colors": "^1.3.3",
+    "nyc": "^14.1.1",
     "pre-commit": "^1.2.2",
-    "snazzy": "^7.0.0",
-    "standard": "^10.0.2"
+    "snazzy": "^8.0.0",
+    "standard": "^13.0.2"
   },
   "standard": {
     "ignore": [
