--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/Kylart/Nyaapi#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "lodash": "^4.17.15",
+    "lodash.omit": "^4.5.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
